# Fandral

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  PACKAGING.md  README.md  Readme.md  compile.bat  compile.sh
include/: AppConfig.h.in  app.h  app.hpp  codehighliter.hpp  commandarea.hpp  findandreplace.hpp  mainwindow.h  mainwindow.hpp  modifiednotebook.hpp  mytab.hpp  mytab2.hpp  tab.h  tab.hpp  textctrl.hpp
resources/: AboutUs.html  help.hhc  help.hhp
resources/HelpPages/: copyandpaste.html  findandreplace.html  insert.html  movement.html  multicharcommand.html  undoredo.html
src/: App.cpp  CodeHighliter.cpp  CommandArea.cpp  FindAndReplace.cpp  MainWindow.cpp  ModifiedNotebook.cpp  MyTab.cpp  MyTab2.cpp  Tab.cpp  TextCtrl.cpp
